add heading block elements

--- a/my-first-webpage-again.html
+++ b/my-first-webpage-again.html
@@ -4,7 +4,10 @@
   <title>Document</title>
 </head>
 <body>
-  <p>This is my first wevb page (x2)!</p>
+  <h1>My first (well, second, really) web page</h1>
+  <h2>Written with the guidance of Epicodus</h2>
+  <p>This is my first web page (x2)!</p>
   <p>Isn't it nice?</p>
+  
 </body>
 </html>
