add final, official HTML elements DOCTYPE, head, title, body

--- a/my-first-webpage-again.html
+++ b/my-first-webpage-again.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-  <title>Document</title>
+  <title>Web page #1 (2)
+  </title>
 </head>
 <body>
   <h1>My first (well, second, really) web page</h1>
@@ -16,6 +17,5 @@
     <li>Javascript</li>
     <li>And a lot more!</li>
   </ul>
-  
 </body>
 </html>
